fixed background color for non mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -299,7 +299,9 @@ fieldset[disabled] .btn-xl.active {
         -moz-transition: padding .3s;
         transition: padding .3s;
     }
-
+    .navbar-nav {
+        background-color: none;
+    }
     .navbar-default .navbar-brand {
         font-size: 2em;
         -webkit-transition: all .3s;
